  to the new format and decompress all fields.
  If you want compressed fields, you can use CompressionTools, that
  creates compressed byte[] to be added as binary stored field. This
  cannot be done automatically, as you also have to decompress such
  fields when reading. You have to reindex to do that.
  (Michael Busch, Uwe Schindler)

API Changes

* LUCENE-1257, LUCENE-1984, LUCENE-1985, ...: Port to Java 1.5 [not yet finished].
  (Uwe Schindler, Robert Muir, Karl Wettin, Paul Elschot, Kay Kay)

* LUCENE-1944: Remove (all) deprecated methods/constructors taking
  String/File directory pathes in IndexReader / IndexWriter and others.
  Also make FSDirectory abstract. (Uwe Schindler)

* LUCENE-1925: Make IndexSearcher's subReaders and docStarts members
  protected; add expert ctor to directly specify reader, subReaders
  and docStarts.  (John Wang, Tim Smith via Mike McCandless)

* LUCENE-1855: Convert TokenStream/AttributeSource API to Generics.
  Now addAttribute()/getAttribute() return an instance of the requested
  attribute interface and no cast needed anymore.  (Uwe Schindler,
  Michael Busch, Robert Muir, Adriano Crestani)

* LUCENE-1857: Convert NumericRangeQuery API to Generics. NumericRangeQuery
  and NumericRangeFilter now have Integer, Long, Float, Double as type param.
  (Uwe Schindler)

* LUCENE-1856: Remove Hits and all references from core and contrib.
  (Michael Busch)

* LUCENE-1957: Remove Filter.bits(IndexReader) method and make 
  Filter.getDocIdSet(IndexReader) abstract. (Michael Busch)

* LUCENE-1960: Remove deprecated Field.Store.COMPRESS. (Michael Busch)

* LUCENE-1961: Remove remaining deprecations from document package.
  (Michael Busch)

* LUCENE-1968: Remove deprecated methods in PriorityQueue. (Michael Busch)

* LUCENE-1970: Remove deprecated methods in DocIdSetIterator and make
  new ones abstract. (Michael Busch)

* LUCENE-1946: Remove deprecated old TokenStream API. (Uwe Schindler)
