@@ -58,18 +58,12 @@ specifier|final
 specifier|static
 class|class
 name|Entry
+extends|extends
+name|ScoreDoc
 block|{
 DECL|field|slot
 name|int
 name|slot
-decl_stmt|;
-DECL|field|docID
-name|int
-name|docID
-decl_stmt|;
-DECL|field|score
-name|float
-name|score
 decl_stmt|;
 DECL|method|Entry
 name|Entry
@@ -78,29 +72,24 @@ name|int
 name|slot
 parameter_list|,
 name|int
-name|docID
+name|doc
 parameter_list|,
 name|float
 name|score
 parameter_list|)
 block|{
+name|super
+argument_list|(
+name|doc
+argument_list|,
+name|score
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|slot
 operator|=
 name|slot
-expr_stmt|;
-name|this
-operator|.
-name|docID
-operator|=
-name|docID
-expr_stmt|;
-name|this
-operator|.
-name|score
-operator|=
-name|score
 expr_stmt|;
 block|}
 annotation|@
@@ -116,13 +105,12 @@ literal|"slot:"
 operator|+
 name|slot
 operator|+
-literal|" docID:"
+literal|" "
 operator|+
-name|docID
-operator|+
-literal|" score="
-operator|+
-name|score
+name|super
+operator|.
+name|toString
+argument_list|()
 return|;
 block|}
 block|}
@@ -301,11 +289,11 @@ comment|// avoid random sort order that could lead to duplicates (bug #31241):
 return|return
 name|hitA
 operator|.
-name|docID
+name|doc
 operator|>
 name|hitB
 operator|.
-name|docID
+name|doc
 return|;
 block|}
 block|}
@@ -499,11 +487,11 @@ comment|// avoid random sort order that could lead to duplicates (bug #31241):
 return|return
 name|hitA
 operator|.
-name|docID
+name|doc
 operator|>
 name|hitB
 operator|.
-name|docID
+name|doc
 return|;
 block|}
 block|}
@@ -746,7 +734,7 @@ name|FieldDoc
 argument_list|(
 name|entry
 operator|.
-name|docID
+name|doc
 argument_list|,
 name|entry
 operator|.
