@@ -38,6 +38,8 @@ class|class
 name|TopDocsCollector
 parameter_list|<
 name|T
+extends|extends
+name|ScoreDoc
 parameter_list|>
 extends|extends
 name|Collector
@@ -136,9 +138,6 @@ index|[
 name|i
 index|]
 operator|=
-operator|(
-name|ScoreDoc
-operator|)
 name|pq
 operator|.
 name|pop
